@@ -1062,6 +1062,11 @@ configuration or data files are not writable.</p>
       <td>&nbsp;</td>
     </tr>
     <tr>
+      <td><a href="http://www.atarimania.com/utility-atari-st-notator-sl_27282.html">Notator</a></td>
+      <td>1.8.1</td>
+      <td>MIDI program</td>
+    </tr>
+    <tr>
       <td><a href="http://www.pouet.net/prod.php?which=50030">Protracker</a></td>
       <td>before 1.0</td>
       <td>&nbsp;</td>
